--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include ':hook'
 include ':tvbus'
 include ':catvod'
 include ':quickjs'
+include ':pyramid'
 include ':thunder'
 include ':youtube'
 include ':jianpian'
