--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,7 @@ dependencies {
     implementation project(':tvbus')
     implementation project(':catvod')
     implementation project(':quickjs')
+    implementation project(':pyramid')
     implementation project(':thunder')
     implementation project(':youtube')
     implementation project(':jianpian')
