--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -46,8 +46,15 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew assembleRelease
 
+    - name: Prepare App
+        run: |
+          mkdir -p ${{ github.workspace }}/apk/
+          for file in `find ~ -name "*.apk" -print`; do
+            mv "$file" ${{ github.workspace }}/apk/
+          done
+
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
           name: app-release.apk
-          path: app/build/outputs/apk/release/app-release.apk
+          path: ${{ github.workspace }}/apk/*
