--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -56,5 +56,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
-          name: app-release.apk
+          name: app-release
           path: ${{ github.workspace }}/apk/*
